[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=6]
radius = 0.45
height = 0.978

[node name="KinematicBody" type="KinematicBody"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.899, 0 )
shape = SubResource( 6 )

[node name="body" type="Spatial" parent="."]
unique_name_in_owner = true

[node name="high_foot_ray" type="RayCast" parent="body"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.624, 0 )
cast_to = Vector3( 0, 0, 1.5 )
collision_mask = 4

[node name="low_foot_ray" type="RayCast" parent="body"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.654, 0 )
cast_to = Vector3( 0, 0, 1.5 )
collision_mask = 4

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
